@@ -5,11 +5,13 @@ Version 0.3 (TBA)
 New features, enhancements:
 
   * Autocompletion (hit Escape)
+  * Select Word command
 
 New contributors:
 
   * aokai
   * Silvio Heuberger (kung_foo)
+  * itrekkie
 
 Planned:
 
